<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/tagid"
    android:id="@+id/textViewTagId"
    />
<EditText
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:id="@+id/editTextTagId"
	android:enabled="false"/>
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/tagurl"
    android:id="@+id/textViewTag"
    />
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >

	<EditText
		android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:id="@+id/editTextRedirectTo"
		android:text="http://m."/>
	<Button
		android:id="@+id/buttonBookmarks"
		android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		android:text="@string/pickbookmark"/>
</LinearLayout>
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
	<Button
		android:layout_width="1dip"
		android:layout_height="wrap_content"
		android:layout_weight="0.5"
		android:id="@+id/buttonSave"
		android:text="@string/save"/>
	<Button
		android:layout_width="1dip"
		android:layout_height="wrap_content"
		android:layout_weight="0.5"
		android:id="@+id/buttonDelete"
		android:text="@string/delete"
		android:visibility="gone"/>
	
</LinearLayout>

<TextView
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:text="@string/tip"
	android:gravity="bottom"/>
</LinearLayout>